fix: Force dark mode Fixes #48

--- a/src/app.css
+++ b/src/app.css
@@ -3,4 +3,6 @@
 @import 'tailwindcss/utilities';
 */
 @import "tailwindcss";
-@plugin "daisyui";
+ @plugin "daisyui" {
+   themes: dark --default;
+ }
